Render the swapi people

--- a/htmlTemplate/index.html
+++ b/htmlTemplate/index.html
@@ -27,8 +27,8 @@
       </tr>
     </thead>
     <tbody>
-      <tr class="row">
-        <td data-column="First Name">James</td>
+      <tr class="row selectedRow">
+        <td data-column="First Name"><input type='checkbox' class='selectRow'/>James</td>
         <td data-column="Last Name">Matman</td>
         <td data-column="Job Title">Chief Sandwich Eater</td>
         <td data-column="Twitter">@james</td>
